# Rustonite

./: .gitignore  Cargo.toml  README.md
bindings-py/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/market_data/: feeds.rs  websockets.rs
data-engine/: Cargo.toml  LICENSE
data-engine/boardcasting/: Cargo.toml
data-engine/market-data/: Cargo.toml
data-engine/market-data/src/: lib.rs  websocket.rs
data-engine/market-data/src/crypto/: binance.rs
docs/: README.md  architecture.md
frontend/: index.html
real-market/: Cargo.toml  LICENSE
real-market/event-bus/: Cargo.toml
real-market/manage/: Cargo.toml
real-market/market-api/: Cargo.toml
real-market/monitoring-check/: Cargo.toml
