[workspace]
resolver = "3"

members = [
    "core",             
    "core/bindings",   
]

[workspace.dependencies]
tokio       = { version = "1.45", features = ["full"] }
serde       = { version = "1.0", features = ["derive"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"] }
sqlx        = { version = "0.8.6", features = ["runtime-tokio-rustls", "macros", "postgres"] }
pyo3        = { version = "0.25.0", features = ["extension-module"] }
tungstenite = "0.26"
log = "0.4"
serde_json = "1.0"
tokio-tungstenite = "*"
redis = "0.31.0"
opentelemetry = "0.3"