[package]
name = "data-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
market-data = { path = "./market-data" }
storage = { path = "./storage" }
boardcasting = { path = "./boardcasting" }
time = { path = "./time" }

serde = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tungstenite = { workspace = true }
sqlx = { workspace = true }
pyo3 = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
redis = { workspace = true }
opentelemetry = { workspace = true }